<resources>
    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="user">Username:</string>
    <string name="prompt">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="promptPassword">Please enter your password</string>
    <string name="promptConfirmPassword">Please confirm your password</string>
</resources>
