<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/user"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/userField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user"
                android:layout_weight="75"
                android:hint="@string/prompt"
                android:textSize="25sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/password"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/passField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user"
                android:layout_weight="75"
                android:hint="@string/promptPassword"
                android:textSize="25sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confPass"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="25"
                android:text="@string/confirmPassword"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/confPassField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user"
                android:layout_weight="75"
                android:hint="@string/promptConfirmPassword"
                android:textSize="25sp"></EditText>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/userLayout"
        android:layout_below="@id/userLayout"
        android:text="@string/submit"
        android:textSize="25sp" />

</RelativeLayout>
